# friday-ddns

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.simple  Dockerfile.ubuntu  Dockerfile.ubuntu-amd64  Dockerfile.ubuntu-arm64  README.md  README_EN.md  build-multiarch.sh  config.example.yaml  docker-compose.yml  friday-ddns.service  friday-ddns.timer  install.sh  安装说明.md
.github/workflows/: continuous-integration-workflow.yml  docker-build.yml  docker-manifest.yml  docker-single-arch.yml  docker.yml  release.yml
src/: main.rs
