[package]
name = "friday-ddns"
description = "Updates the A + Dynamic DNS records for Namecheap"
version = "0.1.0"
authors = ["arxxyr <loosqk@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["namecheap", "ddns"]
homepage = "https://github.com/arxxyr/friday-ddns"
repository = "https://github.com/arxxyr/friday-ddns"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
minreq = { version = "2", features = ["https"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
